--- a/src/app/modules/primary-orders/components/list/list.component.html
+++ b/src/app/modules/primary-orders/components/list/list.component.html
@@ -243,7 +243,7 @@
                                   <td>
                                     <strong>
                                       <!-- t.o + dist disc% + spc dist + b dist -->
-                                      -
+                                      {{ order.discount > 0 ? "-" : "" }}
                                       {{
                                         order.discount | number: "1.2-2"
                                       }}</strong
@@ -446,7 +446,9 @@
                               !(
                                 PRIMARY_ORDER_CONST.COMPLETED === orderStatus ||
                                 PRIMARY_ORDER_CONST.CANCELED === orderStatus
-                              ) && orderStatus !== 'purchased'
+                              ) &&
+                              orderStatus !== 'purchased' &&
+                              orderStatus !== 'returned'
                             "
                             [routerLink]="['edit', order.id]"
                           >
@@ -458,7 +460,9 @@
                               !(
                                 PRIMARY_ORDER_CONST.COMPLETED === orderStatus ||
                                 PRIMARY_ORDER_CONST.CANCELED === orderStatus
-                              ) && orderStatus !== 'purchased'
+                              ) &&
+                              orderStatus !== 'purchased' &&
+                              orderStatus !== 'returned'
                             "
                             data-toggle="modal"
                             data-target="#cancelYesNo"
